--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -5,7 +5,6 @@
 pkgbase=kdeedu
 pkgname=('kdeedu-blinken'
          'kdeedu-cantor'
-         'kdeedu-data'
          'kdeedu-kalgebra'
          'kdeedu-kalzium'
          'kdeedu-kanagram'
@@ -35,16 +34,13 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'cfitsio' 'gpsd'
 	'kdebase-runtime' 'libqalculate' 'gsl' 'boost' 'libindi' 'r' 'libspectre'
 	'python2' 'avogadro')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
-        'gpsd-2.96.patch'
-        'cmake-build-fixes-2.diff')
-sha1sums=('7c94a10f5c17237dcd5c348a8ac129973934cf05'
-          'fd6b6b81945d951bb6ad0bb735df33c11bb2008e'
-          '2c2f3985734a47d6e0f5142604e197fb050ff547')
+        'gpsd-2.96.patch')
+sha1sums=('a3e88f234ab4efe71f2169d3d81764300cde7248'
+          'fd6b6b81945d951bb6ad0bb735df33c11bb2008e')
 
 build() {
     cd ${srcdir}/${pkgbase}-${pkgver}
     patch -Np1 -i ${srcdir}/gpsd-2.96.patch
-    patch -p1 -i ${srcdir}/cmake-build-fixes-2.diff
 
     cd ${srcdir}
 	mkdir build
@@ -63,7 +59,7 @@ package_kdeedu-blinken() {
 	install='kdeedu.install'
 	cd $srcdir/build/blinken
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/blinken
+	cd $srcdir/build/blinken/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -76,14 +72,7 @@ package_kdeedu-cantor() {
 	install='kdeedu.install'
 	cd $srcdir/build/cantor
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/cantor
-	make DESTDIR=$pkgdir install
-}
-
-package_kdeedu-data() {
-	pkgdesc='Data for KDE Educational Software'
-	groups=()
-	cd $srcdir/build/data
+	cd $srcdir/build/cantor/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -93,7 +82,7 @@ package_kdeedu-kalgebra() {
 	install='kdeedu.install'
 	cd $srcdir/build/kalgebra
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kalgebra
+	cd $srcdir/build/kalgebra/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -103,17 +92,17 @@ package_kdeedu-kalzium() {
 	install='kdeedu.install'
 	cd $srcdir/build/kalzium
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kalzium
+	cd $srcdir/build/kalzium/doc
 	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-kanagram() {
 	pkgdesc='KDE Letter Order Game'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu')
 	install='kdeedu.install'
 	cd $srcdir/build/kanagram
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kanagram
+	cd $srcdir/build/kanagram/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -123,7 +112,7 @@ package_kdeedu-kbruch() {
 	install='kdeedu.install'
 	cd $srcdir/build/kbruch
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kbruch
+	cd $srcdir/build/kbruch/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -133,17 +122,17 @@ package_kdeedu-kgeography() {
 	install='kdeedu.install'
 	cd $srcdir/build/kgeography
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kgeography
+	cd $srcdir/build/kgeography/doc
 	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-khangman() {
 	pkgdesc='KDE Hangman Game'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu')
 	install='kdeedu.install'
 	cd $srcdir/build/khangman
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/khangman
+	cd $srcdir/build/khangman/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -153,7 +142,7 @@ package_kdeedu-kig() {
 	install='kdeedu.install'
 	cd $srcdir/build/kig
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kig
+	cd $srcdir/build/kig/doc
 	make DESTDIR=$pkgdir install
 
 	# Use the python2 executable
@@ -166,7 +155,7 @@ package_kdeedu-kiten() {
 	install='kdeedu.install'
 	cd $srcdir/build/kiten
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kiten
+	cd $srcdir/build/kiten/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -176,7 +165,7 @@ package_kdeedu-klettres() {
 	install='kdeedu.install'
 	cd $srcdir/build/klettres
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/klettres
+	cd $srcdir/build/klettres/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -186,7 +175,7 @@ package_kdeedu-kmplot() {
 	install='kdeedu.install'
 	cd $srcdir/build/kmplot
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kmplot
+	cd $srcdir/build/kmplot/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -196,7 +185,7 @@ package_kdeedu-kstars() {
 	install='kdeedu.install'
 	cd $srcdir/build/kstars
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kstars
+	cd $srcdir/build/kstars/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -206,7 +195,7 @@ package_kdeedu-ktouch() {
 	install='kdeedu.install'
 	cd $srcdir/build/ktouch
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/ktouch
+	cd $srcdir/build/ktouch/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -216,17 +205,17 @@ package_kdeedu-kturtle() {
 	install='kdeedu.install'
 	cd $srcdir/build/kturtle
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kturtle
+	cd $srcdir/build/kturtle/doc
 	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-kwordquiz() {
 	pkgdesc='A flashcard and vocabulary learning program'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu')
 	install='kdeedu.install'
 	cd $srcdir/build/kwordquiz
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/kwordquiz
+	cd $srcdir/build/kwordquiz/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -234,11 +223,10 @@ package_kdeedu-libkdeedu() {
 	pkgdesc='Support library for KDE Educational Software'
 	groups=()
 	depends=('kdelibs')
+    replaces=('kdeedu-data')
 	install='kdeedu.install'
 	cd $srcdir/build/libkdeedu
 	make DESTDIR=$pkgdir install
-	install -D -m644 $srcdir/${pkgbase}-${pkgver}/cmake/modules/FindKDEEdu.cmake \
-		$pkgdir/usr/share/apps/cmake/modules/FindKDEEdu.cmake
 }
 
 package_kdeedu-marble() {
@@ -247,19 +235,17 @@ package_kdeedu-marble() {
 	install='kdeedu.install'
 	cd $srcdir/build/marble
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/marble
-	make DESTDIR=$pkgdir install
-	install -D -m644 $srcdir/${pkgbase}-${pkgver}/cmake/modules/FindMarbleWidget.cmake \
-		$pkgdir/usr/share/apps/cmake/modules/FindMarbleWidget.cmake
+#	cd $srcdir/build/marble/doc
+#	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-parley() {
 	pkgdesc='Vocabulary Trainer'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data' 'kdebindings-python')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdebindings-python')
 	install='kdeedu.install'
 	cd $srcdir/build/parley
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/parley
+	cd $srcdir/build/parley/doc
 	make DESTDIR=$pkgdir install
 }
 
@@ -269,8 +255,8 @@ package_kdeedu-rocs() {
 	install='kdeedu.install'
 	cd $srcdir/build/rocs
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/rocs
-	make DESTDIR=$pkgdir install
+#	cd $srcdir/build/rocs/doc
+#	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-step() {
@@ -279,6 +265,6 @@ package_kdeedu-step() {
 	install='kdeedu.install'
 	cd $srcdir/build/step
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/step
+	cd $srcdir/build/step/doc
 	make DESTDIR=$pkgdir install
 }
