--- a/fvwm/trunk/PKGBUILD
+++ b/fvwm/trunk/PKGBUILD
@@ -3,13 +3,15 @@
 
 pkgname=fvwm
 pkgver=2.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A multiple large virtual desktop window manager originally derived from twm"
 arch=('i686' 'x86_64')
 url="http://www.fvwm.org"
 license=('GPL' 'custom')
-depends=('imlib' 'fribidi' 'perl' 'libstroke' 'libxpm' 'readline' 'librsvg')
+depends=('imlib' 'fribidi' 'perl' 'libstroke' 'libxpm' 'librsvg' 'libxinerama' 'libxcursor')
+makedepends=('libxslt')
 conflicts=('fvwm-devel')
+options=('!emptydirs')
 source=(ftp://ftp.fvwm.org/pub/fvwm/version-2/${pkgname}-${pkgver}.tar.bz2 fvwm2.desktop)
 md5sums=('fbbbed1bb41fa0878b17ee209947602d'
          'e52a6ef25a936dcf3ad0e58f2e9ed0ea')
