upgpkg: fvwm-devel 2.7.0-2 Added Xinerama and Xcursor support (close FS#23867)
git-svn-id: file:///srv/repos/svn-packages/svn@122676 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/fvwm-devel/trunk/PKGBUILD
+++ b/fvwm-devel/trunk/PKGBUILD
@@ -3,15 +3,16 @@
 
 pkgname=fvwm-devel
 pkgver=2.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A multiple large virtual desktop window manager originally derived from twm"
 arch=('i686' 'x86_64')
 url="http://www.fvwm.org"
 license=('GPL' 'custom')
-depends=('imlib' 'fribidi' 'perl' 'libstroke' 'libxpm' 'readline' 'librsvg')
-makedepends=('pkg-config')
+depends=('imlib' 'fribidi' 'perl' 'libstroke' 'libxpm' 'librsvg' 'libxinerama' 'libxcursor')
+makedepends=('libxslt')
 conflicts=('fvwm')
 provides=("fvwm=${pkgver}")
+options=('!emptydirs')
 source=(ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-${pkgver}.tar.bz2 fvwm-devel.desktop)
 md5sums=('c7dbb0c067f570e478005edb95dcccc3'
          '3f5bcb246e035ff29aa5bf54487a3db4')
