--- a/keytouch-editor/trunk/PKGBUILD
+++ b/keytouch-editor/trunk/PKGBUILD
@@ -1,11 +1,9 @@
 # $Id$
-# Contributor: Eric Belanger <eric@archlinux.org>
-# Contributor: mouse256 & AndyRTR
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=keytouch-editor
 pkgver=3.1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="An utility to create keyboard files for keytouch"
 arch=('i686' 'x86_64')
 url="http://keytouch.sourceforge.net/"
@@ -17,14 +15,14 @@ md5sums=('046e0525d2b1275f1ec1b5140bd93565' 'def8cf803d7f25dd919b8ad090083bf1')
 sha1sums=('a8c0b28bac4b1f9de3897e1a78dc14b4d994334e' 'c6b725267a628cfc93388044cfd72974f53debaf')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	patch -p1 < ../keytouch-editor-3.1.3-glibc28.patch || return 1
-	autoreconf || return 1
-	./configure --prefix=/usr || return 1
-	make || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -p1 < ../keytouch-editor-3.1.3-glibc28.patch
+  autoreconf
+  ./configure --prefix=/usr
+  make
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	make DESTDIR=${pkgdir} install || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
