--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -5,6 +5,7 @@
 pkgbase=kdeedu
 pkgname=('kdeedu-blinken'
          'kdeedu-cantor'
+         'kdeedu-data'
          'kdeedu-kalgebra'
          'kdeedu-kalzium'
          'kdeedu-kanagram'
@@ -35,18 +36,18 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'cfitsio' 'gpsd'
 	'python2' 'avogadro')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'gpsd-2.96.patch')
-sha1sums=('a3e88f234ab4efe71f2169d3d81764300cde7248'
+sha1sums=('c6e1ea7548f25dd85eb272953d749c5eaa97bbb2'
           'fd6b6b81945d951bb6ad0bb735df33c11bb2008e')
 
 build() {
-    cd ${srcdir}/${pkgbase}-${pkgver}
+    cd ${srcdir}/${pkgbase}-${pkgver}/kdeedu
     patch -Np1 -i ${srcdir}/gpsd-2.96.patch
 
     cd ${srcdir}
 	mkdir build
 	cd build
 	# rpath is needed for cantor to find R
-	cmake ../${pkgbase}-${pkgver} \
+	cmake ../${pkgbase}-${pkgver}/kdeedu \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_SKIP_RPATH=OFF \
 		-DCMAKE_INSTALL_PREFIX=/usr
@@ -59,7 +60,7 @@ package_kdeedu-blinken() {
 	install='kdeedu.install'
 	cd $srcdir/build/blinken
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/blinken/doc
+	cd $srcdir/build/doc/blinken
 	make DESTDIR=$pkgdir install
 }
 
@@ -72,7 +73,14 @@ package_kdeedu-cantor() {
 	install='kdeedu.install'
 	cd $srcdir/build/cantor
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/cantor/doc
+	cd $srcdir/build/doc/cantor
+	make DESTDIR=$pkgdir install
+}
+
+package_kdeedu-data() {
+	pkgdesc='Data for KDE Educational Software'
+	groups=()
+	cd $srcdir/build/data
 	make DESTDIR=$pkgdir install
 }
 
@@ -82,7 +90,7 @@ package_kdeedu-kalgebra() {
 	install='kdeedu.install'
 	cd $srcdir/build/kalgebra
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kalgebra/doc
+	cd $srcdir/build/doc/kalgebra
 	make DESTDIR=$pkgdir install
 }
 
@@ -92,17 +100,17 @@ package_kdeedu-kalzium() {
 	install='kdeedu.install'
 	cd $srcdir/build/kalzium
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kalzium/doc
+	cd $srcdir/build/doc/kalzium
 	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-kanagram() {
 	pkgdesc='KDE Letter Order Game'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data')
 	install='kdeedu.install'
 	cd $srcdir/build/kanagram
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kanagram/doc
+	cd $srcdir/build/doc/kanagram
 	make DESTDIR=$pkgdir install
 }
 
@@ -112,7 +120,7 @@ package_kdeedu-kbruch() {
 	install='kdeedu.install'
 	cd $srcdir/build/kbruch
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kbruch/doc
+	cd $srcdir/build/doc/kbruch
 	make DESTDIR=$pkgdir install
 }
 
@@ -122,17 +130,17 @@ package_kdeedu-kgeography() {
 	install='kdeedu.install'
 	cd $srcdir/build/kgeography
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kgeography/doc
+	cd $srcdir/build/doc/kgeography
 	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-khangman() {
 	pkgdesc='KDE Hangman Game'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data')
 	install='kdeedu.install'
 	cd $srcdir/build/khangman
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/khangman/doc
+	cd $srcdir/build/doc/khangman
 	make DESTDIR=$pkgdir install
 }
 
@@ -142,7 +150,7 @@ package_kdeedu-kig() {
 	install='kdeedu.install'
 	cd $srcdir/build/kig
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kig/doc
+	cd $srcdir/build/doc/kig
 	make DESTDIR=$pkgdir install
 
 	# Use the python2 executable
@@ -155,7 +163,7 @@ package_kdeedu-kiten() {
 	install='kdeedu.install'
 	cd $srcdir/build/kiten
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kiten/doc
+	cd $srcdir/build/doc/kiten
 	make DESTDIR=$pkgdir install
 }
 
@@ -165,7 +173,7 @@ package_kdeedu-klettres() {
 	install='kdeedu.install'
 	cd $srcdir/build/klettres
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/klettres/doc
+	cd $srcdir/build/doc/klettres
 	make DESTDIR=$pkgdir install
 }
 
@@ -175,7 +183,7 @@ package_kdeedu-kmplot() {
 	install='kdeedu.install'
 	cd $srcdir/build/kmplot
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kmplot/doc
+	cd $srcdir/build/doc/kmplot
 	make DESTDIR=$pkgdir install
 }
 
@@ -185,7 +193,7 @@ package_kdeedu-kstars() {
 	install='kdeedu.install'
 	cd $srcdir/build/kstars
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kstars/doc
+	cd $srcdir/build/doc/kstars
 	make DESTDIR=$pkgdir install
 }
 
@@ -195,7 +203,7 @@ package_kdeedu-ktouch() {
 	install='kdeedu.install'
 	cd $srcdir/build/ktouch
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/ktouch/doc
+	cd $srcdir/build/doc/ktouch
 	make DESTDIR=$pkgdir install
 }
 
@@ -205,17 +213,17 @@ package_kdeedu-kturtle() {
 	install='kdeedu.install'
 	cd $srcdir/build/kturtle
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kturtle/doc
+	cd $srcdir/build/doc/kturtle
 	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-kwordquiz() {
 	pkgdesc='A flashcard and vocabulary learning program'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data')
 	install='kdeedu.install'
 	cd $srcdir/build/kwordquiz
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/kwordquiz/doc
+	cd $srcdir/build/doc/kwordquiz
 	make DESTDIR=$pkgdir install
 }
 
@@ -223,10 +231,11 @@ package_kdeedu-libkdeedu() {
 	pkgdesc='Support library for KDE Educational Software'
 	groups=()
 	depends=('kdelibs')
-    replaces=('kdeedu-data')
 	install='kdeedu.install'
 	cd $srcdir/build/libkdeedu
 	make DESTDIR=$pkgdir install
+	install -D -m644 $srcdir/${pkgbase}-${pkgver}/kdeedu/cmake/modules/FindKDEEdu.cmake \
+		$pkgdir/usr/share/apps/cmake/modules/FindKDEEdu.cmake
 }
 
 package_kdeedu-marble() {
@@ -235,17 +244,19 @@ package_kdeedu-marble() {
 	install='kdeedu.install'
 	cd $srcdir/build/marble
 	make DESTDIR=$pkgdir install
-#	cd $srcdir/build/marble/doc
-#	make DESTDIR=$pkgdir install
+	cd $srcdir/build/doc/marble
+	make DESTDIR=$pkgdir install
+	install -D -m644 $srcdir/${pkgbase}-${pkgver}/kdeedu/cmake/modules/FindMarbleWidget.cmake \
+		$pkgdir/usr/share/apps/cmake/modules/FindMarbleWidget.cmake
 }
 
 package_kdeedu-parley() {
 	pkgdesc='Vocabulary Trainer'
-	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdebindings-python')
+	depends=('kdebase-runtime' 'kdeedu-libkdeedu' 'kdeedu-data' 'kdebindings-python')
 	install='kdeedu.install'
 	cd $srcdir/build/parley
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/parley/doc
+	cd $srcdir/build/doc/parley
 	make DESTDIR=$pkgdir install
 }
 
@@ -255,8 +266,8 @@ package_kdeedu-rocs() {
 	install='kdeedu.install'
 	cd $srcdir/build/rocs
 	make DESTDIR=$pkgdir install
-#	cd $srcdir/build/rocs/doc
-#	make DESTDIR=$pkgdir install
+	cd $srcdir/build/doc/rocs
+	make DESTDIR=$pkgdir install
 }
 
 package_kdeedu-step() {
@@ -265,6 +276,6 @@ package_kdeedu-step() {
 	install='kdeedu.install'
 	cd $srcdir/build/step
 	make DESTDIR=$pkgdir install
-	cd $srcdir/build/step/doc
+	cd $srcdir/build/doc/step
 	make DESTDIR=$pkgdir install
 }
