--- a/amarok/trunk/PKGBUILD
+++ b/amarok/trunk/PKGBUILD
@@ -4,22 +4,24 @@
 
 pkgname=amarok
 replaces=('amarok-base' 'amarok-engine-xine' 'amarok-base-mysqlfree')
-pkgver=2.4.0
-pkgrel=4
-pkgdesc="A media player for KDE"
+pkgver=2.4.1
+pkgrel=1
+pkgdesc="The powerful music player for KDE"
 arch=("i686" "x86_64")
 url="http://amarok.kde.org"
 license=('GPL2' 'LGPL2' 'FDL')
 depends=('kdebase-runtime' 'mysql' 'qtscriptgenerator' 'taglib-extras'
-        'liblastfm' 'ffmpeg' 'libofa')
-makedepends=('pkgconfig' 'automoc4' 'cmake' 'libgpod' 'libmtp' 'loudmouth')
+        'liblastfm' 'ffmpeg' 'libofa' 'qjson')
+makedepends=('pkgconfig' 'automoc4' 'cmake' 'libgpod' 'libmtp' 'loudmouth'
+             'libmygpd-qt)
 optdepends=("libgpod: support for Apple iPod audio devices"
-	"libmtp: support for portable media devices"
-	"loudmouth: backend needed by mp3tunes for syncing"
-    "ifuse: support for Apple iPod Touch and iPhone")
+	        "libmtp: support for portable media devices"
+        	"loudmouth: backend needed by mp3tunes for syncing"
+            "ifuse: support for Apple iPod Touch and iPhone"
+            "libmygpod-qt: gpodder.net Internet Service")
 install="${pkgname}.install"
 source=("http://download.kde.org/stable/${pkgname}/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('bdb6ddc8e38d0982a0786ff8ac96d923')
+md5sums=('4c65c5cd4d7bd267bdbef8e912fd6cb6')
 
 build() {
   cd ${srcdir}
