--- a/amarok/trunk/PKGBUILD
+++ b/amarok/trunk/PKGBUILD
@@ -9,16 +9,16 @@ pkgrel=1
 pkgdesc="The powerful music player for KDE"
 arch=("i686" "x86_64")
 url="http://amarok.kde.org"
-license=('GPL2' 'LGPL2' 'FDL')
+license=('GPL2' 'LGPL2.1' 'FDL')
 depends=('kdebase-runtime' 'mysql' 'qtscriptgenerator' 'taglib-extras'
         'liblastfm' 'ffmpeg' 'libofa' 'qjson')
 makedepends=('pkgconfig' 'automoc4' 'cmake' 'libgpod' 'libmtp' 'loudmouth'
-             'libmygpd-qt)
+             'libmygpo-qt')
 optdepends=("libgpod: support for Apple iPod audio devices"
 	        "libmtp: support for portable media devices"
         	"loudmouth: backend needed by mp3tunes for syncing"
             "ifuse: support for Apple iPod Touch and iPhone"
-            "libmygpod-qt: gpodder.net Internet Service")
+            "libmygpo-qt: gpodder.net Internet Service")
 install="${pkgname}.install"
 source=("http://download.kde.org/stable/${pkgname}/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('4c65c5cd4d7bd267bdbef8e912fd6cb6')
