revert dependence for kdelibs in [extra]
git-svn-id: file:///srv/repos/svn-packages/svn@122716 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
-depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'krb5'
+depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'heimdal'
         'shared-desktop-ontologies' 'qca' 'libdbusmenu-qt' 'polkit-qt' 'grantlee'
         'shared-mime-info' 'enchant' 'giflib' 'jasper' 'openexr' 'xdg-utils'
         'phonon' 'hicolor-icon-theme' 'upower' 'udisks' 'libxcursor'
