--- a/fyre/trunk/PKGBUILD
+++ b/fyre/trunk/PKGBUILD
@@ -1,26 +1,26 @@
 # $Id$
-# Maintainer: Eric Belanger <eric@archlinux.org>
-# Contributor: damir <damir@archlinux.org>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=fyre
 pkgver=1.0.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Rendering of the Peter de Jong map"
-arch=("i686" "x86_64")
+arch=('i686' 'x86_64')
 url="http://fyre.navi.cx/"
 license=('GPL')
-depends=('openexr>=1.6' 'libglade' 'gnet' 'shared-mime-info')
-install=${pkgname}.install
+depends=('openexr' 'libglade' 'gnet' 'shared-mime-info' 'hicolor-icon-theme' 'desktop-file-utils')
+install=fyre.install
 source=(http://flapjack.navi.cx/releases/fyre/fyre-${pkgver}.tar.gz)
 md5sums=('44d5830c527325c1ee6fa6ea92b4ba03')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr || return 1
-  make || return 1
-  make prefix=${pkgdir}/usr install || return 1
-  rm ${pkgdir}/usr/share/mime/{XMLnamespaces,globs,magic,aliases,subclasses} || return 1
-  rm ${pkgdir}/usr/share/mime/{generic-icons,globs2,icons,treemagic,types} || return 1
-  rm ${pkgdir}/usr/share/mime/mime.cache || return 1
-  rm ${pkgdir}/usr/share/icons/hicolor/icon-theme.cache || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  ./configure --prefix=/usr
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make update_xdgmime=/bin/false update_fdodesktop=/bin/false gtk_update_icon_cache=/bin/false \
+    prefix="${pkgdir}/usr" install
 }
