--- a/gnet/trunk/PKGBUILD
+++ b/gnet/trunk/PKGBUILD
@@ -1,13 +1,12 @@
 # $Id$
-# Maintainer: Eric Belanger <eric@archlinux.org>
-# Contributor: Tom Newsom <Jeepster@gmx.co.uk>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=gnet
 pkgver=2.0.8
-pkgrel=1
-pkgdesc="GNet is a simple network library"
+pkgrel=2
+pkgdesc="A simple network library"
 arch=('i686' 'x86_64')
-url="http://www.gnetlibrary.org/"
+url="http://live.gnome.org/GNetLibrary"
 license=('LGPL')
 depends=('glib2')
 options=('!libtool')
@@ -16,8 +15,12 @@ md5sums=('93327d2fca333d7e54ba2cf54e071165')
 sha1sums=('74a33dd25cc594b874e3a5171795efd99e567387')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr
-  make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
