--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -36,18 +36,18 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'cfitsio' 'gpsd'
 	'python2' 'avogadro')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'gpsd-2.96.patch')
-sha1sums=('c6e1ea7548f25dd85eb272953d749c5eaa97bbb2'
+sha1sums=('4b27e6e1670760982dae13dc8c51c814c6853396'
           'fd6b6b81945d951bb6ad0bb735df33c11bb2008e')
 
 build() {
-    cd ${srcdir}/${pkgbase}-${pkgver}/kdeedu
+    cd ${srcdir}/${pkgbase}-${pkgver}
     patch -Np1 -i ${srcdir}/gpsd-2.96.patch
 
     cd ${srcdir}
 	mkdir build
 	cd build
 	# rpath is needed for cantor to find R
-	cmake ../${pkgbase}-${pkgver}/kdeedu \
+	cmake ../${pkgbase}-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_SKIP_RPATH=OFF \
 		-DCMAKE_INSTALL_PREFIX=/usr
@@ -234,7 +234,7 @@ package_kdeedu-libkdeedu() {
 	install='kdeedu.install'
 	cd $srcdir/build/libkdeedu
 	make DESTDIR=$pkgdir install
-	install -D -m644 $srcdir/${pkgbase}-${pkgver}/kdeedu/cmake/modules/FindKDEEdu.cmake \
+	install -D -m644 $srcdir/${pkgbase}-${pkgver}/cmake/modules/FindKDEEdu.cmake \
 		$pkgdir/usr/share/apps/cmake/modules/FindKDEEdu.cmake
 }
 
@@ -246,7 +246,7 @@ package_kdeedu-marble() {
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/marble
 	make DESTDIR=$pkgdir install
-	install -D -m644 $srcdir/${pkgbase}-${pkgver}/kdeedu/cmake/modules/FindMarbleWidget.cmake \
+	install -D -m644 $srcdir/${pkgbase}-${pkgver}/cmake/modules/FindMarbleWidget.cmake \
 		$pkgdir/usr/share/apps/cmake/modules/FindMarbleWidget.cmake
 }
 
