--- a/kdeplasma-addons/trunk/PKGBUILD
+++ b/kdeplasma-addons/trunk/PKGBUILD
@@ -72,16 +72,16 @@ pkgname=('kdeplasma-addons-applets-bball'
          'kdeplasma-addons-wallpapers-pattern'
          'kdeplasma-addons-wallpapers-virus'
          'kdeplasma-addons-wallpapers-weather')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
 groups=('kde' 'kdeplasma-addons')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace' 'kdegraphics-libs'
-	'kdeedu-marble' 'eigen' 'scim' 'qwt' 'docbook-xsl' 'boost')
+	         'kdeedu-marble' 'eigen' 'scim' 'qwt' 'boost')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('f888908e937453c9799c6ad71c514a5227e13700')
+sha1sums=('7a43dcfebc0316e681b04d0958d89272620a11b7')
 
 build() {
     cd ${srcdir}
