--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=gnuplot 
-pkgver=4.4.2
-pkgrel=2
+pkgver=4.4.3
+pkgrel=1
 pkgdesc="Plotting package which outputs to X11, PostScript, PNG, GIF, and others" 
 arch=('i686' 'x86_64') 
 url="http://www.gnuplot.info" 
 license=('custom') 
-depends=('readline' 'gd' 'wxgtk' 'cairo' 'libjpeg') 
-makedepends=('texinfo' 'emacs' 'texlive-core') 
+depends=('readline' 'gd' 'wxgtk' 'cairo' 'libjpeg' 'lua') 
+makedepends=('texinfo' 'emacs' 'texlive-core' 'texlive-latexextra')
 install=gnuplot.install 
 source=("http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz")
-md5sums=('a4f0dd89f9b9334890464f687ddd9f50')
+sha1sums=('a4d315b9288739e3cbaa04d8ddda7861b4009bd4')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
