upgpkg: netcdf 4.1.2-1 update to latest version
git-svn-id: file:///srv/repos/svn-packages/svn@122825 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/netcdf/trunk/PKGBUILD
+++ b/netcdf/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: damir <damir@archlinux.org>
 
 pkgname=netcdf
-pkgver=4.1.1
-pkgrel=3
+pkgver=4.1.2
+pkgrel=1
 pkgdesc="network Common Data Form interface for array-oriented data access and corresponding library"
 arch=("i686" "x86_64")
 url="http://www.unidata.ucar.edu/downloads/netcdf/index.jsp"
 depends=('gcc-libs' 'hdf5' 'gcc-fortran' 'curl')
-options=('force' '!libtool' '!makeflags')
+options=('!libtool' '!makeflags')
 license=('custom')
 source=(http://www.unidata.ucar.edu/downloads/netcdf/ftp/netcdf-${pkgver}.tar.gz)
-sha1sums=('6fece208825b978fc2240732f6f57927d71a0552')
+sha1sums=('ef42419b2afd99364e470813bc5b922a1a72a6de')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
