upgpkg: texmacs 1.0.7.10-1 update to 1.0.7.10
git-svn-id: file:///srv/repos/svn-packages/svn@122838 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/texmacs/trunk/PKGBUILD
+++ b/texmacs/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Damir Perisa <damir.perisa@bluewin.ch>
 
 pkgname=texmacs
-pkgver=1.0.7.9
+pkgver=1.0.7.10
 pkgrel=1
 pkgdesc="Free scientific text editor, inspired by TeX and GNU Emacs. WYSIWYG editor TeX-fonts and CAS-interface (Giac, GTybalt, Macaulay 2, Maxima, Octave, Pari, Qcl, R and Yacas) in one."
 arch=('i686' 'x86_64')
@@ -13,7 +13,7 @@ depends=('perl' 'guile' 'texlive-core' 'python2' 'libxext' 'freetype2')
 # do not remove texlive-core dependency, as it is needed!
 optdepends=('transfig: convert images using fig2ps')
 source=(ftp://ftp.texmacs.org/pub/TeXmacs/targz/TeXmacs-${pkgver}-src.tar.gz)
-md5sums=('255d64ebdd900218c091667643f06e44')
+sha1sums=('12491496e68b62aa07369748770771a8c2378129')
 
 build() {
   cd ${srcdir}/TeXmacs-${pkgver}-src
