--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=kdelibs
 pkgver=4.6.3
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
-depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'heimdal'
+depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'krb5'
         'shared-desktop-ontologies' 'qca' 'libdbusmenu-qt' 'polkit-qt' 'grantlee'
         'shared-mime-info' 'enchant' 'giflib' 'jasper' 'openexr' 'xdg-utils'
         'phonon' 'hicolor-icon-theme' 'upower' 'udisks' 'libxcursor'
