--- a/xfprint/trunk/PKGBUILD
+++ b/xfprint/trunk/PKGBUILD
@@ -3,19 +3,19 @@
 
 pkgname=xfprint
 pkgver=4.6.1
-pkgrel=4
+pkgrel=5
 pkgdesc="A print dialog and a printer manager for Xfce"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://www.xfce.org/"
 groups=('xfce4')
-depends=("libxfcegui4>=$pkgver" "xfconf>=$pkgver" 'libcups>=1.3.10' 'a2ps' 'heimdal>=1.3.1'
+depends=("libxfcegui4>=$pkgver" "xfconf>=$pkgver" 'libcups>=1.3.10' 'a2ps' 'krb5'
          'gnutls>=2.6.5' 'hicolor-icon-theme')
 makedepends=('pkgconfig' 'intltool')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://www.xfce.org/archive/xfce-${pkgver}/src/${pkgname}-${pkgver}.tar.bz2
-	xfprint-manager-fix.diff)
+source=(http://archive.xfce.org/xfce/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2
+        xfprint-manager-fix.diff)
 md5sums=('d92fca97a42816085080baf07a99a62e'
          '69b3619a285e94d602a1d0ac08f4ca06')
 
