--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Stéphane Gaudreault <stephane@archlinux.org>
 
 pkgname=krb5
-pkgver=1.9
-pkgrel=2
+pkgver=1.9.1
+pkgrel=1
 pkgdesc="The Kerberos network authentication system"
 arch=('i686' 'x86_64')
 url="http://web.mit.edu/kerberos/"
@@ -14,30 +14,17 @@ provides=('heimdal')
 replaces=('heimdal')
 conflicts=('heimdal')
 backup=('etc/krb5/krb5.conf' 'etc/krb5/kdc.conf')
-source=(http://web.mit.edu/kerberos/dist/${pkgname}/${pkgver}/${pkgname}-${pkgver}-signed.tar
+source=(http://web.mit.edu/kerberos/dist/${pkgname}/1.9/${pkgname}-${pkgver}-signed.tar
         kadmind.rc
-        krb5-kdc.rc
-        CVE-2010-4022.patch
-        CVE-2011-0281.0282.0283.patch
-        CVE-2011-0284.patch
-        CVE-2011-0285.patch)
-sha1sums=('a7ad1b4ed37bff4b9087f6c4561b2b222208d779'
+        krb5-kdc.rc)
+sha1sums=('e23a1795a237521493da9cf3443ac8b98a90c066'
           '640e3046c6558313d2be81cf2252afc8622892b0'
-          '77d2312ecd8bf12a6e72cc8fd871a8ac93b23393'
-          '79ece8b1c140deb2c01bfb64af575636b9bc7704'
-          'fb2486168ce128cb1a2866bd0df8cd7c4bcd7824'
-          '1c72390c5d629eee592e5cb0c2b600b376e2fdc5'
-          'b6ae716616ecd5e92f32ec8203a1ab51b5726184')
+          '77d2312ecd8bf12a6e72cc8fd871a8ac93b23393')
 options=('!emptydirs')
 
 build() {
    tar zxvf ${pkgname}-${pkgver}.tar.gz
    cd "${srcdir}/${pkgname}-${pkgver}/src"
-
-   patch -Np2 -i ../../CVE-2010-4022.patch
-   patch -Np2 -i ../../CVE-2011-0281.0282.0283.patch
-   patch -Np2 -i ../../CVE-2011-0284.patch
-   patch -Np2 -i ../../CVE-2011-0285.patch
 
    export CFLAGS+=" -fPIC -fno-strict-aliasing -fstack-protector-all"
    export CPPFLAGS+=" -I/usr/include/et"
