--- a/msmtp/trunk/PKGBUILD
+++ b/msmtp/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Ben Mazer <blm@groknil.org>
 
 pkgname=msmtp
-pkgver=1.4.23
+pkgver=1.4.24
 pkgrel=1
 pkgdesc="A mini smtp client"
 arch=('i686' 'x86_64')
@@ -11,20 +11,20 @@ license=('GPL3')
 url="http://msmtp.sourceforge.net"
 depends=('gnutls' 'libidn')
 provides=('smtp-forwarder')
-source=(http://download.sourceforge.net/sourceforge/msmtp/${pkgname}-${pkgver}.tar.bz2)
 install=${pkgname}.install
-md5sums=('5fb7ae88186624cdb125d3efad3fdc16')
+source=(http://download.sourceforge.net/sourceforge/msmtp/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('3ed704fbd3e7419cab5c65bb7928d9ba')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc --with-ssl=gnutls
   make
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 
   # this can not be the default
-  #install -Dm644 doc/msmtprc-system.example $startdir/pkg/etc/msmtprc
+  #install -Dm644 doc/msmtprc-system.example "${pkgdir}"/etc/msmtprc
 }
