--- a/rxvt-unicode/trunk/PKGBUILD
+++ b/rxvt-unicode/trunk/PKGBUILD
@@ -3,21 +3,22 @@
 # Contributor: dibblethewrecker dibblethewrecker.at.jiwe.dot.org
 
 pkgname=rxvt-unicode
-pkgver=9.10
+pkgver=9.11
 pkgrel=1
 pkgdesc="An unicode enabled rxvt-clone terminal emulator (urxvt)"
-arch=(i686 x86_64)
-depends=('gcc-libs' 'libxft' 'gdk-pixbuf2')
-makedepends=('ncurses' 'perl>=5.12.2' 'pkgconfig')
-optdepends=('perl: lots of utilities' 'gtk2-perl: to use the urxvt-tabbed')
+arch=('i686' 'x86_64')
 url="http://software.schmorp.de/pkg/rxvt-unicode.html"
-license=("GPL")
+license=('GPL')
+depends=('gcc-libs' 'libxft' 'gdk-pixbuf2')
+optdepends=('perl: lots of utilities' 'gtk2-perl: to use the urxvt-tabbed')
 source=(http://dist.schmorp.de/rxvt-unicode/${pkgname}-${pkgver}.tar.bz2 \
         ${pkgname}.desktop popup-menu-hang.diff)
-md5sums=('a23aa40b31e843878b6f9c44768de430' '3de6c13126a45bc3bc9f6bba077a1311'\
+md5sums=('1bed5bfeed026e0bfafa0e9e4f62aa37'
+         '3de6c13126a45bc3bc9f6bba077a1311'
          'aead33ba3b08eeb251fb0c1427a4a024')
-sha1sums=('54c896a4885b8984b0dfa652269c3c34c4d75f2d' '962aebc88982dbeb62a7c4a051ff567e015f61a0'\
-         'ec4013f4af3a45da928b75f40fbf6389070e7fdd')
+sha1sums=('21d0fad9a6032dbcf2c43a85f288543c6bd5ab3d'
+          '962aebc88982dbeb62a7c4a051ff567e015f61a0'
+          'ec4013f4af3a45da928b75f40fbf6389070e7fdd')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
