--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,5 +1,5 @@
 # $Id$
-# Maintainer:
+# Maintainer: Evangelos Foutras <foutrelis@gmail.com>
 # Contributor: Aaron Griffin <aaron@archlinux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
@@ -12,17 +12,22 @@ url="http://packages.debian.org/sid/ltrace"
 license=('GPL')
 depends=('glibc' 'elfutils')
 backup=('etc/ltrace.conf')
-source=(http://ftp.debian.org/debian/pool/main/l/ltrace/${pkgname}_${pkgver}.orig.tar.gz)
+source=(http://ftp.debian.org/debian/pool/main/l/ltrace/${pkgname}_$pkgver.orig.tar.gz)
 md5sums=('3fa7fe715ab879db08bd06d1d59fd90f')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "$srcdir/$pkgname-$pkgver"
+
   sed -i 's|/usr/bin/install|/bin/install|' configure
+
   ./configure --prefix=/usr --sysconfdir=/etc
   make
 }
 
 package(){
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install
+  cd "$srcdir/$pkgname-$pkgver"
+
+  make DESTDIR="$pkgdir" install
 }
+
+# vim:set ts=2 sw=2 et:
