--- a/libevent/trunk/PKGBUILD
+++ b/libevent/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Judd <jvinet@zeroflux.org>
 
 pkgname=libevent
-pkgver=2.0.10
+pkgver=2.0.11
 pkgrel=1
 pkgdesc="An event notification library"
-license=('GPL2')
 arch=('i686' 'x86_64')
 url="http://www.monkey.org/~provos/libevent/"
+license=('GPL2')
 depends=('openssl')
-source=("http://www.monkey.org/~provos/libevent-$pkgver-stable.tar.gz")
 options=('!libtool')
-md5sums=('a37401d26cbbf28185211d582741a3d4')
+source=("http://www.monkey.org/~provos/libevent-$pkgver-stable.tar.gz")
+md5sums=('bd7ef33c08aa6401c8d67dbc88679ded')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}-stable"
@@ -23,5 +23,5 @@ build() {
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}-stable"
-  make DESTDIR=${pkgdir} install
+  make DESTDIR="${pkgdir}" install
 }
