--- a/mhash/trunk/PKGBUILD
+++ b/mhash/trunk/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgname=mhash
 pkgver=0.9.9.9
-pkgrel=1
-pkgdesc="A thread-safe hash library which provides a uniform interface to hash algorithms (MD5, SHA-1, HAVAL, etc"
+pkgrel=2
+pkgdesc="A thread-safe hash library which provides a uniform interface to hash algorithms (MD5, SHA1, HAVAL, etc)"
 arch=('i686' 'x86_64')
 url="http://mhash.sourceforge.net/"
 license=('LGPL')
@@ -16,12 +16,12 @@ source=(http://downloads.sourceforge.net/sourceforge/mhash/${pkgname}-${pkgver}.
 md5sums=('f91c74f9ccab2b574a98be5bc31eb280')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	./configure --prefix=/usr --enable-static || return 1
-	make || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  ./configure --prefix=/usr --enable-static
+  make
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	make prefix=${pkgdir}/usr install || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
