--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=phonon-gstreamer
-pkgver=4.5.0
+pkgver=4.5.1
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://phonon.kde.org"
@@ -12,10 +12,10 @@ depends=('gstreamer0.10-base-plugins')
 makedepends=('cmake' 'automoc4' 'phonon' 'mesa')
 provides=('phonon-backend')
 source=("http://download.kde.org/stable/phonon/phonon-backend-gstreamer/${pkgver}/src/phonon-backend-gstreamer-${pkgver}.tar.bz2")
-md5sums=('2875139f2b7b649396125f4acc66de67')
+md5sums=('021cf7740208e7212b7ce91adb6a349b')
 
 build() {
-  cd ${srcdir}
+  cd "${srcdir}"
   mkdir build
   cd build
   cmake ../phonon-backend-gstreamer-${pkgver} \
@@ -25,6 +25,6 @@ build() {
 }
 
 package() {
-  cd ${srcdir}/build
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/build"
+  make DESTDIR="${pkgdir}" install
 }
