--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,24 +1,22 @@
 # $Id$
-# Maintainer: Giovanni Scafora <giovanni@archlinux.org>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=libwpd
-pkgver=0.9.1
+pkgver=0.9.2
 pkgrel=1
 pkgdesc="Library for importing WordPerfect (tm) documents"
 arch=('i686' 'x86_64')
 url="http://libwpd.sourceforge.net/"
 license=('LGPL')
-depends=('libgsf>=1.14.3-2')
+depends=('gcc-libs')
+makedepends=('libgsf>=1.14.20')
 options=('!libtool')
 source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('6edd1b7eb8992888c6c82fc95859ac1b')
-sha1sums=('af4bc109ad270e873652d0af80e96b42d82dddbc')
+md5sums=('da43f18da732f6156cef145d06613960')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-
-  ./configure --prefix=/usr \
-              --without-docs
+  ./configure --prefix=/usr
   make
 }
 
