--- a/akonadi/trunk/PKGBUILD
+++ b/akonadi/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=akonadi
-pkgver=1.5.2
+pkgver=1.5.3
 pkgrel=1
 pkgdesc="PIM layer, which provides an asynchronous API to access all kind of PIM data"
 arch=('i686' 'x86_64')
@@ -13,10 +13,10 @@ depends=('shared-mime-info' 'boost-libs' 'mysql' 'soprano')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 install="${pkgname}.install"
 source=("http://download.akonadi-project.org/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('1c69a74474389e35709171a329c77bed')
+md5sums=('ad342acca61c2af27be4cce61b2d925a')
 
 build() {
-  cd ${srcdir}
+  cd "${srcdir}"
   mkdir build
   cd build
   cmake ../${pkgname}-${pkgver} \
@@ -27,6 +27,6 @@ build() {
 }
 
 package() {
-  cd ${srcdir}/build
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/build"
+  make DESTDIR="${pkgdir}" install
 }
