drop nonfree stuff, fix headers
git-svn-id: file:///srv/repos/svn-packages/svn@122938 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ffmpeg/trunk/PKGBUILD
+++ b/ffmpeg/trunk/PKGBUILD
@@ -5,26 +5,28 @@
 
 pkgname=ffmpeg
 pkgver=20110330
-pkgrel=1
+pkgrel=2
 pkgdesc="Complete and free Internet live audio and video broadcasting solution for Linux/Unix"
 arch=('i686' 'x86_64')
 url="http://ffmpeg.org/"
 license=('GPL')
-depends=('bzip2' 'lame' 'sdl' 'libvorbis' 'faac' 'xvidcore' 'zlib' 'x264' 'libtheora' 'opencore-amr' 'alsa-lib' 'libvdpau' 'libxfixes' 'schroedinger' 'libvpx' 'libva' 'openjpeg')
+depends=('bzip2' 'lame' 'sdl' 'libvorbis' 'xvidcore' 'zlib' 'x264' 'libtheora' 'opencore-amr' 'alsa-lib' 'libvdpau' 'libxfixes' 'schroedinger' 'libvpx' 'libva' 'openjpeg')
 makedepends=('yasm' 'git')
 #git clone git://git.videolan.org/ffmpeg.git
-source=(ftp://ftp.archlinux.org/other/ffmpeg/${pkgname}-${pkgver}.tar.xz)
-md5sums=('dd682a876a496b9f9ae8afb3b3b70389')
+source=(ftp://ftp.archlinux.org/other/ffmpeg/${pkgname}-${pkgver}.tar.xz
+        avutils-make-aes-and-sha-public.patch)
+md5sums=('dd682a876a496b9f9ae8afb3b3b70389'
+         '06eb45335669cb742fdcbea48f0605ce')
 
 build() {
   cd "$srcdir/$pkgname"
 
+  patch -Np1 -i "$srcdir/avutils-make-aes-and-sha-public.patch"
+
   ./configure \
     --prefix=/usr \
-    --enable-gpl \
     --enable-libmp3lame \
     --enable-libvorbis \
-    --enable-libfaac \
     --enable-libxvid \
     --enable-libx264 \
     --enable-libvpx \
@@ -36,10 +38,10 @@ build() {
     --enable-libopencore_amrwb \
     --enable-libschroedinger \
     --enable-libopenjpeg \
+    --enable-gpl \
     --enable-version3 \
-    --enable-nonfree \
     --enable-runtime-cpudetect \
-    --disable-debug  # libfaac is nonfree
+    --disable-debug
 
   make
   make tools/qt-faststart
